<resources>

    <!--// Methods //-->
    <string name="app_name">CourseRatingApp</string>
    <string name="onCreate">OnCreate() called</string>
    <string name="onSaveInstanceState">onSaveInstanceState() called</string>
    <string name="onClick">onClick() called</string>
    <string name="init">init() called</string>
    <string name="on_activity_result">onActivityResult() called</string>


    <!--// Other //-->
    <string name="Signing_in">Signing in...</string>
    <string name="please_choose_the_course_you_would_like_to_rate">Please choose the course you would like to rate</string>
    <string name="node_js">Node.js</string>
    <string name="angular">Angular</string>
    <string name="js">JS</string>
    <string name="java">Java</string>
    <string name="c">C</string>
    <string name="python">Python</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="courseratingapp">CourseRatingApp</string>
    <string name="sign_in">Sign in</string>
    <string name="LoggedInAs">"You are logged in as: "</string>
    <string name="stringFormat">%s%s</string>
    <string name="job_opportunities_post_graduation">Job opportunities post-graduation</string>
    <string name="quality_of_examples">Quality of examples</string>
    <string name="feedback_from_teacher">Feedback from teacher</string>
    <string name="teacher_preperation">Teacher Preparation</string>
    <string name="teacher_overall_performance">Teacher overall performance</string>
    <string name="subject_relevance">Subject Relevance</string>
    <string name="submit_answers">Submit Answers</string>
    <string name="fill_out_fields">Please fill out all fields</string>
    <string name="result_canceled_answers">You didn\'t submit your answers. Please click on a course to start again</string>
    <string name="nullPointerAction">Error likely due to receivedAction being null. Resolve this error by making certain CoursesPageActivity assigns and sends an Action</string>
    <string name="COURSE_RATINGS_KEY">CourseRatings</string>
    <string name="python_rating_key">PYTHON_OVERALL_KEY</string>
    <string name="c_rating_key">C_rating_key</string>
    <string name="js_rating_key">JS_RATING_KEY</string>
    <string name="angular_rating_key">ANGULAR_RATING_KEY</string>
    <string name="nodejs_rating_key">NODEJS_RATING_KEY</string>
    <string name="java_rating_key">JAVA_RATING_KEY</string>
    <string name="python_button_clicked">python button clicked</string>
    <string name="C_button_clicked">C button clicked</string>
    <string name="js_button_clicked">JS button clicked</string>
    <string name="angular_button_clicked">angular button clicked</string>
    <string name="nodejs_button_clicked">nodejs button clicked</string>
    <string name="java_button_clicked">java button clicked</string>
    <string name="sign_up">Sign Up</string>

</resources>
